# scLDL

./: .gitignore  LICENSE  README.md  ablation_manifold_mnist.py  analyze_tonsil_data.py  compare_levi_lible.py  cross_dataset_tonsil.py  debug_hybrid_loss.py  pyproject.toml  run_lesc_sc.py  sc_ldl_app.py  streamlit_app.py  test_lesc_mnist.py  test_lesc_speed.py  verify_metrics.py
artifacts/: CARD.txt  LESC.txt  Label_Distribution_Learning_and_Single_Cell_Analysis.md  concentration_ldl.txt  improvements_single_cell.md  plan_kl_schedulers.md  qinghai-zheng-lible-8a5edab282632443.txt
notebooks/: label_enhancer_demo.py
src/scLDL/: label_enhancer.py  mnist_cnn.py
src/scLDL/models/: label_enhancer.py  trainer.py
src/scLDL/utils/: data.py  metrics.py
tests/: benchmark_mnist.py  benchmark_toy.py  compare_all_models_mnist.py  debug_ldl.py  generate_soft_labels.py  run_demixing_plot.py  run_mixing_test.py  run_realistic_mixup.py  run_sc_ldl_benchmark.py  run_sc_mixing_test.py  run_sc_mixing_test_adata.py  systematic_mixing_test.py  systematic_mixing_test_2digit.py  test_diff_levi.py  test_difflevi_clean.py  test_loss_tracking.py  test_models.py  train_ldl_mnist.py  train_resnet_baseline.py  train_resnet_hybrid.py  train_sc_models_adata.py  train_sc_models_tonsil.py  verify_gap_loss.py
