[project]
name = "scldl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=1.0.0",
    "ipykernel>=7.1.0",
    "leidenalg>=0.11.0",
    "nvidia-smi>=0.1.3",
    "scanpy>=1.11.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
